Correct display of right menu on mobile display.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -435,8 +435,12 @@ hr {
 
 
   .right-menu-title{
-    margin-top: 0;
-    padding-top: 50px;
+    margin-top: -20px;
+    padding-top: 20px;
+  }
+
+  .bottom-element {
+    margin-top: 20px;
   }
 
 }
